--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc-silent -p './tsconfig.json' --suppress @ && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -29,6 +29,7 @@
     "eslint-plugin-react": "^7.31.11",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
+    "tsc-silent": "^1.2.2",
     "typescript": "^4.9.3",
     "vite": "^3.2.4"
   }
