--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "key-interface2",
-  "private": true,
-  "version": "0.0.0",
+  "name": "klaytn-rpc-list",
+  "version": "0.0.1",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "tsc-silent -p './tsconfig.json' --suppress @ && vite build && rm -rf docs && mv dist docs",
